force-app/main/default/objects/MUSW__Automation_Filter__c/fields/MUSW__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Action_Type__c</fullName>
    <description>Specifies the circumstances to which the filter is restricted. One filter per rule must have an action specified to determine which object is the triggering event.</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>