force-app/main/default/objects/MUSW__Automation_Filter__c/fields/MUSW__Active__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether the filter should be considered or ignored.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>