force-app/main/default/objects/MUSW__Automation_Filter__c/fields/MUSW__Automation_Rule__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Automation_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the rule this filter is a part of.</description>
    <label>Automation Rule</label>
    <referenceTo>MUSW__Automation_Rule__c</referenceTo>
    <relationshipName>Filters</relationshipName>
    <type>Lookup</type>
</CustomField>