force-app/main/default/objects/MUSW__Automation_Filter__c/fields/MUSW__Field__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Field__c</fullName>
    <description>Specifies which field the filter criteria must inspect.</description>
    <label>Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>