force-app/main/default/objects/MUSW__Automation_Filter__c/fields/MUSW__Group_Condition__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Group_Condition__c</fullName>
    <description>The filter types for an entire record (not a field). &quot;Not Exists&quot; is the only option at this time (&quot;Exists&quot; is implicit in all filters).</description>
    <inlineHelpText>Use NOT EXISTS if you want the rule to fire when there are NO records that match every filter in the group. eg. NOT EXISTS construction fees but unpaid, or inspection tasks but open, or required submittals but not loaded.</inlineHelpText>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NOT EXISTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>