force-app/main/default/objects/MUSW__Automation_Filter__c/fields/MUSW__Operator__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Operator__c</fullName>
    <description>Specifies what comparison operation the table field filter evaluated against the value.</description>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>=</fullName>
                <default>true</default>
                <label>=</label>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>CONTAINS</fullName>
            </value>
            <value>
                <fullName>NOT IN</fullName>
            </value>
            <value>
                <fullName>NOT CONTAINS</fullName>
            </value>
            <value>
                <fullName>IS CHANGED</fullName>
            </value>
            <value>
                <fullName>NOT CHANGED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>