force-app/main/default/objects/MUSW__Automation_Filter__c/validationRules/MUSW__Value_Check_Syntax.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Value_Check_Syntax</fullName>
    <active>true</active>
    <description>Check syntax</description>
    <errorConditionFormula>OR(
   CONTAINS(MUSW__Value__c, &quot;&lt;content&gt;&quot;) &amp;&amp; !REGEX(MUSW__Value__c, &quot;[a-zA-Z\\s\\d]*(\\&lt;content\\&gt;\\w+(\\.\\w+){1,2}\\&lt;/content\\&gt;)?[a-zA-Z\\s\\d]*&quot;),
   CONTAINS(MUSW__Value__c, &quot;\\{\\!&quot;) &amp;&amp; !REGEX(MUSW__Value__c, &quot;[a-zA-Z\\s\\d]*(\\{\\!\\$?\\w+(\\.\\w+){1,2}\\})?[a-zA-Z\\s\\d]*&quot;) 
)</errorConditionFormula>
    <errorDisplayField>MUSW__Value__c</errorDisplayField>
    <errorMessage>Invalid Filter Value syntax</errorMessage>
</ValidationRule>